--- a/_config.yaml
+++ b/_config.yaml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-console
+remote_theme: b2a3e8/jekyll-theme-console
 title: Octocat's homepage
 description: Bookmark this to keep an eye on my project updates!
 
