--- a/_config.yaml
+++ b/_config.yaml
@@ -1,6 +1,6 @@
 remote_theme: b2a3e8/jekyll-theme-console
-title: Octocat's homepage
-description: Bookmark this to keep an eye on my project updates!
+title: Sales Advocate Solution
+description: The next generation in procurement support.
 
 
 header_pages:
@@ -10,6 +10,6 @@ header_pages:
 style: dark # dark (default), light or hacker
 listen_for_clients_preferred_style: true # false (default) or true
 
-footer: 'follow us on <a href="https://twitter.com/xxx">twitter</a>'
+# footer: 'follow us on <a href="https://twitter.com/xxx">twitter</a>'
 
 # google_analytics: UA-NNNNNNNN-N
