--- a/_config.yaml
+++ b/_config.yaml
@@ -6,6 +6,7 @@ description: The next generation in procurement support.
 header_pages:
   - index.md
   - about.md
+  - pricing.md
 
 style: dark # dark (default), light or hacker
 listen_for_clients_preferred_style: true # false (default) or true
