--- a/_config.yaml
+++ b/_config.yaml
@@ -1,7 +1,7 @@
 remote_theme: b2a3e8/jekyll-theme-console
 title: Sales Advocate Solution
 description: The next generation in procurement support.
-
+markdown: GFM
 
 header_pages:
   - index.md
