--- a/_config.yaml
+++ b/_config.yaml
@@ -1,4 +1,4 @@
-remote_theme: b2a3e8/jekyll-theme-console
+remote_theme: "jeffreytse/jekyll-theme-yat"
 title: Sales Advocate Solution
 description: The next generation in procurement support.
 markdown: GFM
@@ -8,9 +8,8 @@ header_pages:
   - about.md
   - pricing.md
 
-style: dark # dark (default), light or hacker
-listen_for_clients_preferred_style: true # false (default) or true
-
+plugins:
+  - jekyll-remote-theme
 # footer: 'follow us on <a href="https://twitter.com/xxx">twitter</a>'
 
 # google_analytics: UA-NNNNNNNN-N
